# openclaw-mem

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: architecture.md  benchmark.md  quickstart.md
openclaw_mem/: __init__.py  archive.py  auto_capture.py  brain_check.py  brain_router.py  chunker.py  cli.py  config.py  embedder.py  index.py  init_cmd.py  observe.py  sanitizer.py  search.py
tests/: test_archive.py  test_auto_capture.py  test_brain_check.py  test_brain_router.py  test_embedder.py  test_extended_tags.py  test_init_cmd.py  test_observe.py  test_progressive.py  test_sanitizer.py  test_search.py
